--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "query-to-mongo": "^0.10.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
